[tool.poetry]
name = "weather-data-etl-pipeline"
version = "0.1.0"
description = ""
authors = ["sch-paulo <pschmitzjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
